# muGPT

./: README.md  bigram.py  main.ipynb  pyproject.toml
src/: bigram_language_model.py  block.py  corpus.py  ffwd.py  head.py  hyperparameters.py  main.py
